--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,6 @@ uvicorn[standard]==0.32.0
 python-dotenv==1.0.1
 pydantic==2.9.0
 pydantic-settings==2.5.0
+sentence-transformers==3.0.1
+numpy==1.26.4
+scikit-learn==1.5.1
