--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ pydantic-settings==2.5.0
 sentence-transformers==3.0.1
 numpy==1.26.4
 scikit-learn==1.5.1
+groq==0.11.0
+openai==1.54.0
+anthropic==0.39.0
