--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,7 @@ groq==0.11.0
 openai==1.54.0
 anthropic==0.39.0
 nltk==3.9.1
+pdfplumber==0.11.4
+python-docx==1.1.2
+python-multipart==0.0.9
+redis==5.0.1
