--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,10 @@ uvicorn[standard]==0.32.0
 python-dotenv==1.0.1
 pydantic==2.9.0
 pydantic-settings==2.5.0
-sentence-transformers==3.0.1
+voyageai>=0.3.5
 numpy==1.26.4
 scikit-learn==1.5.1
-groq==0.11.0
+groq==0.13.0
 openai==1.54.0
 anthropic==0.39.0
 nltk==3.9.1
@@ -14,3 +14,5 @@ pdfplumber==0.11.4
 python-docx==1.1.2
 python-multipart==0.0.9
 redis==5.0.1
+httpx==0.27.2
+google-genai>=0.5.0
