--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,5 +14,7 @@ pdfplumber==0.11.4
 python-docx==1.1.2
 python-multipart==0.0.9
 redis==5.0.1
-httpx==0.27.2
+httpx>=0.28.1
 google-genai>=0.5.0
+sentence-transformers>=2.2.2
+openpyxl>=3.1.0
